--- a/com.Trobin/test-output/old/Default suite/methods.html
+++ b/com.Trobin/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c19091">  <td>22/11/21 15:27:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpenBrowser.open()[pri:0, instance:com.Trobin.Trobin.OpenBrowser@38c6f217]">open</td> 
-  <td>main@1574598287</td>   <td></td> </tr>
+<tr bgcolor="6f7171">  <td>22/11/23 12:57:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.open()[pri:0, instance:com.Trobin.Trobin.Login_to_App@436813f3]">&gt;&gt;open</td> 
+<td>&nbsp;</td>  <td>main@607207372</td>   <td></td> </tr>
+<tr bgcolor="c19091">  <td>22/11/23 12:57:35</td>   <td>2190</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_to_App.verify_Login()[pri:0, instance:com.Trobin.Trobin.Login_to_App@436813f3]">verify_Login</td> 
+  <td>main@607207372</td>   <td></td> </tr>
 </table>
